nailgun/static/css/main.css
/* ... */
.deploy-btn.disabled, .deploy-btn.disabled:hover, .deploy-btn[disabled], .deploy-btn[disabled]:hover {
  box-shadow: inset 0 2px 6px rgba(0,0,0,.17);
  text-shadow: none;
  color: rgba(255,255,255,0.4);
  cursor: default;
  background: rgba(0,0,0,0.1);
}

.modal-header h3 {
  font-size: 26px;
  margin: 0;
  line-height: 40px;
  height: 40px;
}

.table-releases-box {
  background-color: #ffffff;
  padding: 20px 20px 10px 20px;
  border-radius: 4px;
}

.table-releases th {color: #777777;}

.modal .help-block {
  color: #777777;
  font-size: 13px;
}

.modal .wizard-footer button {
  min-width: 90px;
}

.modal .wizard-body {
  margin: 0px;
  padding: 0px;
}

.wizard-steps-box {
  width: 100%;
  height: 100%;
}

.wizard-steps-box:after {
  clear: both;
}

.wizard-steps-nav {
  background-color: #f0f0f0;
  display: block;
  width: 25%;
  overflow: hidden;
  float: left;
}

.wizard-steps-content {
  display: block;
  float: left;
  background-color: #ffffff;
  width: 75%;
  padding: 15px 20px 20px 20px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.wizard-step-nav-item {
  list-style: none outside none;
  margin-bottom: 25px;
  margin-left: 0px;
}

.wizard-step-nav-item > li {
  list-style: none outside none;
  display: block;
  width: 100%;
  text-align: left;
  padding: 8px 0px 8px 30px;
  color: #999999;
  cursor: default;
}

.wizard-step-nav-item > .current {
  background-color: #ffffff;
  color: #e98900;
  /* border-right: 2px solid #000000; */
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-weight: 600;
  cursor: pointer;
}



.wizard-step-nav-item > .available {
  background-color: none;
  color: #468847;
  /* border-right: 2px solid #468847; */
  padding-left: -10px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  cursor: pointer;
}

.wizard-step-nav-item > .available:before {
  font-family: "fontello";
  font-style: normal;
  font-weight: normal;
  speak: none;
  content: '\2713';
  margin-left: -20px;
  margin-right: 3px;
}

.loading {
  margin-top: 200px;
  width: 100%;
  height: 90px;
  background: url(../img/cloud-loader.gif) no-repeat top center;
}

.loading.layout-loaded {
  margin-top: 108px;
}

.progress-deploy {
  width: 350px;
  padding: 2px;

  height: 12px;
  background-color: #2b3036;
  background-image: none;
}

.progress > .bar {
  border-radius: 3px;
}

.progress > .bar > p {
  white-space: pre;
}

.progress-deploy-clusters-page {
  padding: 2px 10px;
  background: none;
  border: none;
  box-shadow: none;
}

.progress-deploy-clusters-page > .bar {
  height: 12px;
}

.progress-verify-networks {
  display: inline-block;
  float: right;
  margin: 7px 0px 0px 0px;
  width: 120px;
  height: 16px;
}

.network-tab-content .btn-group {
  margin: 7px 0 5px 0;
}

.networks-table, .neutron-parameters  {
  width: 100%;
  margin-bottom: 10px;
}

.networks-table > div, .neutron-parameters > div {
  padding-left: 3px;
}

.networks-table .range-row-header, .neutron-parameters .range-row-header {
  height: 23px;
  font-weight: bold;
}

.networks-table .range-row-header > div, .neutron-parameters .range-row-header > div {
  float: left;
  margin-left: 10px;
  font-size: 11px;
  line-height: 14px;
  width: 220px;
}

.networks-table .range-row label, .neutron-parameters .range-row label {
  display: inline-block;
  margin-bottom: 0;
  float: left;
}

.networks-table .range-row-header.mini > div, .neutron-parameters .range-row-header.mini > div {
  width: 133px;
}

.networks-table .range-row-header > div:first-child, .neutron-parameters .range-row-header > div:first-child {
  margin-left: 202px;
}

.networks-table label.hide, .neutron-parameters label.hide {
  display: none;
}

.networks-table input.mini, .neutron-parameters input.mini {
  width: 91px;
}

.networks-table .ip_ranges > div, .neutron-parameters .ip_ranges > div {
  margin-bottom: 2px;
  float: left;
}

.networks-table .ip-ranges-control, .neutron-parameters .ranges-control {
  width: 20px;
  margin-top: 3px;
  float: left;
  margin-left: 0 !important;
}

.parameter-control.vlan-tagging {
  width: 20px;
}

input.vlan-tagging {
  width: 176px;
}

.networks-table .range-row, .neutron-parameters .range-row {
  margin-left: 199px;
}

.networks-table .ip-ranges, .neutron-parameters .nameservers-row button {
  padding: 0;
}

.networks-table div.error, .neutron-parameters div.error {
  float: left;
}

.networks-table .error .help-inline, .neutron-parameters .error .help-inline {
  display: block;
  padding-top: 5px;
  max-width: 540px;
  color: #B94A48;
}

#networkManager {
  margin-bottom: 30px;
}

.nodes-summary-container {
  cursor: default;
}

.roles-block-row:first-child .span2 {
  width: auto;
}

.roles-block-row:first-child .span2 label {
  white-space: nowrap;
}

.roles-block-row:first-child .span8 {
    width: 720px;
}

.roles-block-row:last-child .span10 {
  width: auto;
}

.tab-pane > div > div {
  overflow: visible;
}

.wrapper {
  margin: 0 20px;
  padding-left: 3px;
}

.wrapper h3 {
  margin-top: 0;
}

.display-changes-dialog > ul {
  margin-left: 35px;
}

.pending-deletion-flag {
  display: block;
  position: relative;
  top: -114px;
  left: 0px;
  z-index: 100;
  width: 16px;
  height: 15px;
  background: url(../img/pending-flags.png) no-repeat top left;
}

.pending-addition-flag {
  display: block;
  position: relative;
  top: -114px;
  left: -1px;
  z-index: 100;
  width: 16px;
  height: 15px;
  background: url(../img/pending-flags.png) no-repeat 0px -16px;
}

/* Notifications Popover */
.notification-wrapper {
  position: relative;
}
/* ... */

